--- a/TextRPG/TextRPG.vcxproj
+++ b/TextRPG/TextRPG.vcxproj
@@ -89,8 +89,12 @@
     <ClInclude Include="src\GraphicDevice.h" />
     <ClInclude Include="src\GridBasedMapGenerator.h" />
     <ClInclude Include="src\Level.h" />
+    <ClInclude Include="src\lib\pugiconfig.hpp" />
+    <ClInclude Include="src\lib\pugixml.hpp" />
+    <ClInclude Include="src\MainScreen.h" />
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\MapGenerator.h" />
+    <ClInclude Include="src\MenuState.h" />
     <ClInclude Include="src\PlayerController.h" />
     <ClInclude Include="src\PlayingState.h" />
     <ClInclude Include="src\Random.h" />
@@ -100,9 +104,14 @@
     <ClInclude Include="src\StateMachine.h" />
     <ClInclude Include="src\TextGame.h" />
     <ClInclude Include="src\TextSprite.h" />
+    <ClInclude Include="src\UIButton.h" />
+    <ClInclude Include="src\UIComponent.h" />
+    <ClInclude Include="src\UILabel.h" />
+    <ClInclude Include="src\UIManager.h" />
+    <ClInclude Include="src\UIMenu.h" />
+    <ClInclude Include="src\UIScreen.h" />
     <ClInclude Include="src\Vector2.h" />
     <ClInclude Include="src\ViewFrame.h" />
-    <ClInclude Include="src\WelcomeScreen.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Canvas.cpp" />
@@ -115,9 +124,11 @@
     <ClCompile Include="src\GraphicDevice.cpp" />
     <ClCompile Include="src\GridBasedMapGenerator.cpp" />
     <ClCompile Include="src\Level.cpp" />
+    <ClCompile Include="src\lib\pugixml.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\MapGenerator.cpp" />
+    <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\PlayerController.cpp" />
     <ClCompile Include="src\PlayingState.cpp" />
     <ClCompile Include="src\Singleton.cpp" />
@@ -126,12 +137,21 @@
     <ClCompile Include="src\StateMachine.cpp" />
     <ClCompile Include="src\TextGame.cpp" />
     <ClCompile Include="src\TextSprite.cpp" />
+    <ClCompile Include="src\UIButton.cpp" />
+    <ClCompile Include="src\UIComponent.cpp" />
+    <ClCompile Include="src\UILabel.cpp" />
+    <ClCompile Include="src\UIManager.cpp" />
+    <ClCompile Include="src\UIMenu.cpp" />
+    <ClCompile Include="src\UIScreen.cpp" />
     <ClCompile Include="src\Vector2.cpp" />
     <ClCompile Include="src\ViewFrame.cpp" />
-    <ClCompile Include="src\WelcomeScreen.cpp" />
+    <ClCompile Include="src\MainScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Data\Config.ini" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\Data\UI.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
