--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 * text=auto
 
 # Custom for Visual Studio
+*.cpp    diff=astextplain
 *.cs     diff=csharp
 *.sln    merge=union
 *.csproj merge=union
