Set up EventDispatcher class
- Set up EventDispatcher class
- Use std::bind and std::function to pass the listener functions
- Let UIComponent inherite from EventDispatcher so the UI item can
trigger the events
- Replace the global function in MainScreen by its member function

--- a/TextRPG/TextRPG.vcxproj
+++ b/TextRPG/TextRPG.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="src\ConfigData.h" />
     <ClInclude Include="src\ConfigParser.h" />
     <ClInclude Include="src\ConsoleInput.h" />
+    <ClInclude Include="src\EventDispatcher.h" />
     <ClInclude Include="src\FileUtil.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameState.h" />
@@ -118,6 +119,7 @@
     <ClCompile Include="src\ConfigData.cpp" />
     <ClCompile Include="src\ConfigParser.cpp" />
     <ClCompile Include="src\ConsoleInput.cpp" />
+    <ClCompile Include="src\EventDispatcher.cpp" />
     <ClCompile Include="src\FileUtil.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameState.cpp" />
