Add map size and viewframe size to the config file
- Add map size and viewframe size to the config file
- Use 'Terminal' font instead of default font for the console

--- a/Data/Config.ini
+++ b/Data/Config.ini
@@ -1,9 +1,20 @@
 [Game]
 Width 	= 120
 Height 	= 40
-FontWidth = 11
+FontWidth = 10
 FontHeight = 18
+; FontWidth = 14
+; FontHeight = 24
 
 [Player]
 PlayerSpeed = 16
-PlayerAvatar = @
+; PlayerAvatar = 64
+PlayerAvatar = 1
+
+[Map]
+; Size of the full map
+Width = 120
+Height = 80
+; Size of the view frame of the map in the game
+MapFrameWidth = 90
+MapFrameHeight = 30
